# Week2-OSEmulator

./: .gitignore  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.txt  abc.txt  adf.txt  apple.txt  c.txt  cmake_install.cmake  config.txt  csopesy-log.txt  dfjdlsakjf.txt  e.txt  f.txt  falkfadf.txt  for.opesy  g.txt  implementation_flowchart.md  input.opesy  main.cpp  p01.txt  p02.txt  p03.txt  p04.txt  proc.txt  process01.txt  process02.txt  process03.txt  process04.txt  process05.txt  process06.txt  (+11 more)
include/: commands.hpp  config.hpp  console.hpp  dispatcher.hpp  evaluator.hpp  instruction_generator.hpp  instruction_parser.hpp  memory_manager.hpp  parser.hpp  process_control_block.hpp  scheduler.h  scheduler.hpp  screen.hpp  thread_safe_queue.h  thread_safe_queue.hpp
initial-parser/: eval.cpp  eval.h  main.cpp  parser.cpp  parser.h
src/: commands.cpp  config.cpp  console.cpp  dispatcher.cpp  evaluator.cpp  instruction_generator.cpp  instruction_parser.cpp  main.cpp  memory_manager.cpp  parser.cpp  process_control_block.cpp  scheduler.cpp  screen.cpp  thread_safe_queue.h
